# project1phase1

./: CMakeLists.txt  README.md  package.xml
config/: control.yaml
launch/: debug.launch.py  display.launch.py  gazebo.launch.py  robot_description_publisher.py  spawn_robot_ros2.launch.py
meshes/: back_trailer.STL  base_link.STL  trailer.STL  wheel_bbl.STL  wheel_bbr.STL  wheel_bfl.STL  wheel_bfr.STL  wheel_bl.STL  wheel_br.STL  wheel_fl.STL  wheel_fr.STL  wheel_tbl.STL  wheel_tbr.STL  wheel_tfl.STL  wheel_tfr.STL
scripts/: keyboard_control.py
urdf/: truck_urdf.csv  truck_urdf.urdf.xacro
